--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </div>
 
         <div class="menu-avatar">
-          <img alt="Select a card" id="card-img" />
+          <img id="card-img" />
         </div>
 
         <div class="card-details frame">
